feat: [PAGOPA-2696] Defining a minor review of the entire project (#31)
* [PAGOPA-2696] fix: resolving typos on old exception interface
* [PAGOPA-2696] fix: refactoring utility method
* [PAGOPA-2696] fix: refactoring `getRevision` endpoint
* [PAGOPA-2696] fix: refactoring `getFlow` endpoint
* [PAGOPA-2696] fix: refactoring `searchFlowByPsp` endpoint
* [PAGOPA-2696] fix: refactoring `searchFlowByPspAndIuv` and `searchFlowByPspAndIur` endpoints
* [PAGOPA-2696] chore: housekeeping of `FdrHistoryTableRepository` class
* [PAGOPA-2696] chore: housekeeping of `FdrOldRestClient` class
* [PAGOPA-2696] fix: refactoring `getDownloads` and `getUploads` endpoints
* [PAGOPA-2696] chore: housekeeping of all project's unused class
* [PAGOPA-2696] fix: refactoring Helm parameters
* [PAGOPA-2696] fix: resolving issues on updated code
* [PAGOPA-2696] fix: resolving issues on code review pipeline
* [PAGOPA-2696] fix: refactoring Helm structure on DEV environment
* [PAGOPA-2696] fix: resolving typo on envSecret tag
* [PAGOPA-2696] fix: resolving worng-formed queries on MongoDB
* [PAGOPA-2696] fix: refactoring subscription-key parameter
* [PAGOPA-2696] fix: resolving bug on repository creation
* [PAGOPA]-2696] fix: refactoring Helm files on UAT and PROD environments
* [PAGOPA-2696] fix: including new parameters for logging process
* [PAGOPA-2696] fix: refactoring query engine and resolved bugs found during tests
* [PAGOPA-2696] fix: updating APIs infrastructure
* [PAGOPA-2696] fix: resolving bug on REST client class
* [PAGOPA-2696] fix: changing wrongly named query parameters on REST client API
* [PAGOPA-2696] fix: resolving issues on `searchFlowByPspAndIur` API
* [PAGOPA-2696] fix: resolving bug on query building process for IN clauses
* [PAGOPA-2696] chore: refactoring of OAS autogen for infrastructure
* [PAGOPA-2696] chore: resolving bug on OAS-autogen script
* [PAGOPA-2696] chore: regenerating OpenAPI files
* [PAGOPA-2696] fix: resolving potential Log Injection
* [PAGOPA-2696] fix: r